--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,17 +16,17 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: Npm@1
-    displayName: 'npm install'
+  - task: Npm-install
+      displayName: 'npm install'
+      inputs:
+        verbose: false
+  - task: Npm-build-export
+    displayName: 'npm run build:stage'
+    env:
+      NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN: $(NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN)
+      NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL: $(NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL)
+      NEXT_PUBLIC_CONTENTFUL_SPACE_ID: $(NEXT_PUBLIC_CONTENTFUL_SPACE_ID)
     inputs:
+      command: custom
       verbose: false
-- task: Npm@1
-  displayName: 'npm run build:stage'
-  env:
-    NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN: $(NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN)
-    NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL: $(NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL)
-    NEXT_PUBLIC_CONTENTFUL_SPACE_ID: $(NEXT_PUBLIC_CONTENTFUL_SPACE_ID)
-  inputs:
-    command: custom
-    verbose: false
-    customCommand: 'run build:stage'
+      customCommand: 'run build:stage'
