--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,25 +10,9 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-  - task: Npm@1
-    displayName: 'npm install'
-    inputs:
-      verbose: false
-
-  - task: Npm@1
-    displayName: 'npm run build:stage'
-    env:
-      NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN: $(NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN)
-      NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL: $(NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL)
-      NEXT_PUBLIC_CONTENTFUL_SPACE_ID: $(NEXT_PUBLIC_CONTENTFUL_SPACE_ID)
-    inputs:
-      command: custom
-      verbose: false
-      customCommand: 'run build:stage'
-
   - task: AzureStaticWebApp@0
     inputs:
       app_location: '/'
       output_location: 'dist'
       api_location: 'api'
-      azure_static_web_apps_api_token: '9bab02021f35fc268770f3cd48353635a4b4d643ad3c842f90857cae32d349ae0-bcef7e1b-023d-4070-b6cd-a709d1ac321e00349152'
+      azure_static_web_apps_api_token: $(DEPLOYMENT_TOKEN)
