--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,10 @@
 # Starter pipeline
-
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
-trigger: ['develop']
+trigger:
+  - develop
 
 pool:
   vmImage: ubuntu-latest
@@ -12,7 +12,8 @@ pool:
 steps:
   - task: AzureStaticWebApp@0
     inputs:
-      app_location: '/'
-      output_location: 'dist'
-      api_location: 'api'
-      azure_static_web_apps_api_token: $(DEPLOYMENT_TOKEN)
+      app_location: "/" 
+      api_location: "api"
+      output_location: "dist"
+    env:
+      azure_static_web_apps_api_token: $(deployment_token)
