--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,4 @@ steps:
       api_location: "api"
       output_location: "dist"
     env:
-      azure_static_web_apps_api_token: $(deployment_token)
+      azure_static_web_apps_api_token: $(DEPLOYMENT_TOKEN)
