Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
   - task: AzureStaticWebApp@0
     inputs:
-      app_location: "elliotforwater-blog" 
+      app_location: "/" 
       api_location: "api"
       output_location: "dist"
     env:
