Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,3 @@
-# Starter pipeline
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
@@ -12,7 +11,8 @@ pool:
 steps:
   - task: AzureStaticWebApp@0
     inputs:
-      app_location: "/" 
+      app_location: "/"
+      app_build_command: 'npm run build:prod'
       api_location: "api"
       output_location: "dist"
     env:
