--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
 
   - task: AzureStaticWebApp@0
     inputs:
-      app_location: "/blog"
+      app_location: "/"
       app_build_command: 'echo 1'
       api_location: "api"
       output_location: "dist"
