--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:prod": "env-cmd -f .env.production run-s clean just-build export",
     "start:stage": "env-cmd -f .env.staging next start",
     "start": "env-cmd -f .env.production next start",
-    "export": "next export -o dist/blog",
+    "export": "next export -o dist",
     "clean": "rimraf .next dist",
     "build-stats": "ANALYZE=true npm run just-build",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
