--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-# Frontend Url 
-NEXT_PUBLIC_BASE_URL=http://localhost:4000
+NEXT_PUBLIC_BASE_URL=https://purple-coast-094447810.azurestaticapps.net/
 
+NEXT_PUBLIC_API_URL=https://api.elliotforwater.com/api
+NEXT_PUBLIC_WEBAPP_URL=https://elliotforwater.com
