--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build:prod": "env-cmd -f .env.production run-s clean just-build export",
     "start:stage": "env-cmd -f .env.staging next start",
     "start": "env-cmd -f .env.production next start",
-    "export": "next export -o dist",
-    "clean": "rimraf .next dist",
+    "export": "next export",
+    "clean": "rimraf .next out",
     "build-stats": "ANALYZE=true npm run just-build",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
     "@tailwindcss/jit": "^0.1.8",
+    "classnames": "^2.3.1",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "next": "^10.0.9",
@@ -38,19 +39,28 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "~4.0.1",
     "autoprefixer": "^10.2.5",
     "env-cmd": "^10.1.0",
     "eslint": "^7.22.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-config-prettier": "~7.0.0",
+    "eslint-config-standard": "~14.1.1",
+    "eslint-config-standard-jsx": "~8.1.0",
+    "eslint-plugin-import": "~2.22.1",
+    "eslint-plugin-jest": "~24.1.0",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-prettier": "~3.2.0",
+    "eslint-plugin-promise": "~4.2.1",
+    "eslint-plugin-react": "~7.21.3",
+    "eslint-plugin-react-hooks": "~4.1.2",
+    "eslint-plugin-standard": "~4.0.1",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
+    "react-hook-form": "^6.15.8",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.0.4",
     "typescript": "^4.2.3"
