--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,31 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "esnext",
+    "lib": ["dom", "es2017"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "removeComments": true,
-    "preserveConstEnums": true,
-    "strict": true,
-    "alwaysStrict": true,
-    "strictNullChecks": true,
-
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "allowUnreachableCode": false,
-    "noFallthroughCasesInSwitch": true,
-
-    "target": "es5",
-    "outDir": "dist",
-    "declaration": true,
-    "sourceMap": true,
-
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "allowJs": false,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-
-    "jsx": "preserve",
-    "noEmit": true,
     "isolatedModules": true,
-    "downlevelIteration": true
+    "jsx": "preserve"
   },
-  "exclude": ["./dist/**/*", "./node_modules/**/*"],
+  "typeRoots": ["./node_modules/@types", "./types"],
+  "exclude": [
+    "dist",
+    "out",
+    ".next",
+    "node_modules",
+    "next.config.js",
+    "postcss.config.js",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "coverage"
+  ],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
