--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@contentful/rich-text-react-renderer": "^15.5.1",
     "@contentful/rich-text-types": "^15.5.1",
     "@next/bundle-analyzer": "^10.0.9",
+    "@types/gtag.js": "^0.0.8",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
