--- a/.env.staging
+++ b/.env.staging
@@ -2,3 +2,6 @@ NEXT_PUBLIC_BLOG_URL=https://elliotforwaterblogstaging.azurewebsites.net
 NEXT_PUBLIC_WEBAPP_URL=https://staging.elliotforwater.com
 
 NEXT_PUBLIC_API_URL=https://api.elliotforwater.com/api
+
+
+NEXT_PUBLIC_IS_PRODUCTION=TRUE
