--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 
 # Frontend Url 
 NEXT_PUBLIC_BLOG_URL=http://localhost:4000
-NEXT_PUBLIC_WEBAPP_URL=https://staging.elliotforwater.com 
+NEXT_PUBLIC_WEBAPP_URL=https://localhost:3000 
 
 MOCK_CONTENTFUL=TRUE
