--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
-    "next": "^10.0.9",
+    "next": "^11.1.3",
     "next-seo": "^4.23.0",
     "next-translate": "^1.2.0",
     "react": "^17.0.2",
@@ -41,22 +41,22 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "~4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "autoprefixer": "^10.2.5",
     "env-cmd": "^10.1.0",
     "eslint": "^7.22.0",
-    "eslint-config-prettier": "~7.0.0",
-    "eslint-config-standard": "~14.1.1",
-    "eslint-config-standard-jsx": "~8.1.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jest": "~24.1.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-jsx": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-prettier": "~3.2.0",
-    "eslint-plugin-promise": "~4.2.1",
-    "eslint-plugin-react": "~7.21.3",
-    "eslint-plugin-react-hooks": "~4.1.2",
-    "eslint-plugin-standard": "~4.0.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-standard": "^4.0.1",
     "fetch-jsonp": "^1.2.1",
     "hoist-non-react-statics": "^3.3.2",
     "husky": "^4.3.8",
