--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BLOG_URL=https://elliotforwaterblogstaging.azurewebsites.net
+NEXT_PUBLIC_BLOG_URL=http://blog.elliotforwater.com/blog
 NEXT_PUBLIC_WEBAPP_URL=https://elliotforwater.com
 
 NEXT_PUBLIC_API_URL=https://api.elliotforwater.com/api
