--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "elliotforwater-blog",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next -p 4000",
+    "dev": "next dev -p 4000",
     "just-build": "next build",
     "build:stage": "env-cmd -f .env.staging run-s clean just-build",
     "build:prod": "env-cmd -f .env.production run-s clean just-build",
