--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
   },
   "dependencies": {
+    "@contentful/field-editor-markdown": "^1.1.1",
     "@mapbox/rehype-prism": "^0.6.0",
     "@tailwindcss/jit": "^0.1.8",
     "classnames": "^2.3.1",
     "date-fns": "^2.19.0",
     "gray-matter": "^4.0.2",
     "next": "^11.1.3",
-    "next-seo": "^4.23.0",
+    "next-seo": "^4.29.0",
     "next-translate": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.0",
     "rehype-stringify": "^8.0.0",
     "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
